unpackaged/main/default/objects/AccountAccountRelationship__c/AccountAccountRelationship__c.object-meta.xml
<CustomObject>
    <description>Object representing a relationship between a Consumer record type Person Account and another Account.</description>
    <label>Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>