unpackaged/main/default/objects/AccountAccountRelationship__c/fields/Originating_Account__c.field-meta.xml
<CustomField>
    <fullName>Originating_Account__c</fullName>
    <description>This refers to the Patient Account that originated this Relationship record</description>
    <label>Originating Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>