unpackaged/main/default/objects/AccountAccountRelationship__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the related account was the referral source for the originating account.</description>
    <inlineHelpText>Check this box if the related account was the referral source for the originating account.</inlineHelpText>
    <label>Referral Source</label>
    <type>Checkbox</type>
</CustomField>