unpackaged/main/default/objects/AccountAccountRelationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <description>This relates the originating account to either a company account or another patient account.</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>ClaimedRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>