unpackaged/main/default/objects/AccountAccountRelationship__c/fields/Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Notes__c</fullName>
    <description>Notes about the relationship between the originating account and the related account.  These should be long-term notes that remain true about the relationship rather than the individuals.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes about the relationship between the originating account and the related account.  These should be long-term notes that remain true about the relationship rather than the individuals.</inlineHelpText>
    <label>Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>