unpackaged/main/default/objects/AccountAccountRelationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Picklist used to indicate the relationship of the Related Account to the Originating Account</description>
    <inlineHelpText>Please select the relationship of the Related Account to the Originating Account</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Partner/Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Corporate Partnership</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other Family Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>